Maybe fix styling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,5 @@
 .revealedWord { color: red }
 
 body {
-  font-size: 20px;
+  font-size: 1.25rem
 }
